# telegrinder-alchemy

./: .bot-env-dev-example  .bot-env-prod-example  .bot-env-test  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  readme.md
bot/: __init__.py  __main__.py
bot/db/: __init__.py  post.py  user.py
bot/handlers/: posts.py  start.py
bot/nodes/: __init__.py  db.py  user.py
bot/settings/: __init__.py
migrations/: env.py
migrations/versions/: 5fde28272f1b_.py  d0428a22f5b2_.py
scripts/: dev-run.sh  prod-run.sh  setup.sh
