[tool.poetry]
name = "telegrinder-alchemy"
version = "0.1.0"
description = ""
authors = [
    "prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>",
]
license = "MIT"
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = "^3.12"
telegrinder = "^0.3.4"
sqlalchemy = { version = "^2.0.35", extras = ["asyncio"] }
aiosqlite = "^0.20.0"
betterconf = "^4.0.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
psycopg = { version = "^3.2.3", extras = ["binary"] }


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.3"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
